# densatio

./: LICENSE  README.md  pyproject.toml
src/densatio/: __init__.py
src/densatio/functional/: __init__.py  pooling_functions_1d.py  pooling_functions_2d.py  pooling_functions_3d.py
src/densatio/layers/: __init__.py  custom_pooling_1d.py  custom_pooling_2d.py  custom_pooling_3d.py
